Finish content added

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <p>Broadway Housing Communities Youth Leadership Institute, New York NY <em>2021 - Present</em></p>
         <ul>
           <li>Attend meetings</li>
-          <li>learn about resume writing and cover letters, effective communication and conflict resolution, problem solving and teamwork.</li>
+          <li>Learn about resume writing and cover letters, effective communication and conflict resolution, problem solving and teamwork.</li>
           <li>provide support to the youth activist movement</li>
           <li>Created the Youth Leadership Institute (YLI) Logo</li>
 
@@ -80,7 +80,7 @@
         <p>Team Workshop</p>
         <p>Broadway Housing Communities, New York NY <em>2022</em></p>
         <ul>
-          <li>Two in-perosn sessions with Liz Khan from Khan Consultants Group, where we discusses and discovered our strengths and weaknesses, and how we can improve them and use them to improve as a team.</li>
+          <li>Two in-perosn sessions with Liz Khan from Khan Consultants Group, where we discussed and discovered our strengths and weaknesses, and how we can improve them and use them to improve as a team.</li>
 
 
         </ul>
