Final commit for all content added to resume

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="resume-intro">
 <h1>Sherley Mercedes</h1>
   <h2>Junior Graphic Designer</h2>
-<p>I am a Junior Graphic Designer specializing in web design and branding. I am highly motivated and ready to support and deliver what is needed and have an attention to detail</p>
+<p>I am a Junior Graphic Designer specializing in web design and branding. I am highly motivated and ready to support and deliver what is needed and have an attention to detail.</p>
   </div>
   
  </header> 
